--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
 
   <modelVersion>4.0.0</modelVersion>
   <artifactId>com.jcraft.jsch-all</artifactId>
-  <version>0.1.42.w1-SNAPSHOT</version>
+  <version>0.1.42.w1</version>
 
   <name>OpenEngSB :: OSGi Wrapped Bundles :: jsch</name>
 
